--- a/scripts/compose.yaml
+++ b/scripts/compose.yaml
@@ -24,3 +24,10 @@ services:
     # network_mode: "host"
     volumes:
       - ~/.docker/.persist/state-search/pg-data:/var/lib/postgresql/data
+  qdrant:
+    container_name: state-search-vb
+    image: qdrant/qdrant
+    ports:
+      - 6333:6333
+    volumes:
+      - ~/.cache/qdrant_storage:/qdrant/storage:z
