--- a/state-search-be/pyproject.toml
+++ b/state-search-be/pyproject.toml
@@ -10,8 +10,6 @@ readme = "README.md"
 version = "0.1.0"
 
 [tool.poetry.dependencies]
-bleach = "^6.1.0"
-fastapi-limiter = "^0.1.5"
 grpcio = "^1.69.0"
 grpcio-tools = "^1.69.0"
 jsonlines = "^4.0.0"
@@ -20,6 +18,7 @@ protobuf = "^5.29.3"
 python = ">=3.11, <3.13"
 python-dotenv = "^1.0.0"
 sentence-transformers = "^3.3.1"
+qdrant-client = "^1.13.2"
 
 [build-system]
 build-backend = "poetry.core.masonry.api"
