--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ FRONTEND_PORT=3000
 BACKEND_PORT=7720
 POSTGRES_PORT=5432
 QDRANT_PORT=6333
+
+DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:${POSTGRES_PORT}/statesearch"
