Add dependency graph

--- a/.env.example
+++ b/.env.example
@@ -3,6 +3,7 @@ POSTGRES_PASSWORD="<YOUR DATABSE PASSWORD>"
 POSTGRES_VOLUME="<PATH TO YOUR POSTGRES VOLUME>"
 MODEL_NAME_OR_PATH="<ABSOLUTE PATH TO YOUR MODEL>"
 QDRANT_VOLUME="<PATH TO QDRANT VOLUME>"
+LEANGRAPH_FILE_PATH="<PATH TO LEAN GRAPH FILE>"
 
 FRONTEND_PORT=3000
 BACKEND_PORT=7720
