--- a/lean-state-search/package.json
+++ b/lean-state-search/package.json
@@ -29,19 +29,25 @@
     "clsx": "^2.1.1",
     "csrf": "^3.1.0",
     "isomorphic-dompurify": "^2.20.0",
-    "katex": "^0.16.21",
+    "katex": "^0.16.11",
     "lucide-react": "^0.408.0",
-    "markdown-it": "^14.1.0",
     "next": "15.0.4",
     "next-secure-headers": "^1.0.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-feather": "^2.0.10",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^10.1.0",
+    "reagraph": "^4.29.0",
+    "rehype": "^13.0.2",
+    "rehype-katex": "^7.0.1",
+    "rehype-pretty-code": "^0.14.1",
+    "rehype-slug": "^6.0.0",
+    "remark-math": "^6.0.0",
     "sonner": "^1.7.2",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
-    "zod": "^3.24.1"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@bufbuild/protoc-gen-es": "^1.10.0",
@@ -50,7 +56,7 @@
     "@eslint/js": "^9.18.0",
     "@shikijs/markdown-it": "^1.27.2",
     "@types/katex": "^0.16.7",
-    "@types/markdown-it": "^13.0.9",
+    "@types/markdown-it": "^13.0.7",
     "@types/node": "^20.17.14",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
